# ror

./: .gitignore  Cargo.toml  Cargo.toml.old  DESERIALIZATION_FIX.md  EVM_VERIFICATION.md  LINKING_ISSUE_RESOLVED.md  NEXT_STEPS_LINUX.md  NOTES.md  PROOF_GENERATION_NOTES.md  STACK_OVERFLOW_ISSUE.md  diagnose_linking.sh  generate_proof.sh  generate_proof_large_stack.sh  test.proof  test_devmode.sh  verify_proof.sh
contracts/: RorschachVerifier.sol
core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/src/: lib.rs
src/: main.rs
