[workspace]
members = ["host", "core", "methods"]
resolver = "2"

[workspace.dependencies]
alloy = "1.2.1"
hex = "0.4"
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }

# risc0
risc0-zkvm = { version = "1.2.0", default-features = false }
