[package]
name = "ror"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
alloy = { workspace = true }
hex = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"
ror-core = { path = "../core" }
risc0-zkvm = { version = "3.0", features = ["prove"] }
methods = { path = "../methods" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# For Bonsai proving service (Groth16 bridge)
bonsai-sdk = { version = "1.4", optional = true }

[features]
default = []
# Enable Bonsai for Groth16 EVM proofs
bonsai = ["bonsai-sdk"]
