[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "3.0" }

[dependencies]
ror-core = { path = "../core", default-features = false }
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }

[package.metadata.risc0]
methods = ["guest"]
