[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[dependencies]
ror-core = { path = "../../core", default-features = false }
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha3 = { version = "0.10", default-features = false }
